--- a/index.html
+++ b/index.html
@@ -2,24 +2,39 @@
 <html>
 <head>
 <title>Project: Landing Page</title>
-
+<link rel="stylesheet" href="styles/styles.css">
 </head>
 
-<header>
-<h4>Header Logo</h4>
-<a href="https://google.com">Header Link One</a>
-<a href="https://google.com">Header Link Two</a>
-<a href="https://google.com">Header Link Three</a>
-</header>
+<div class="header">
+<div class="logo">Header Logo</div>
+<div class="nav">
+<div class="link">Header Link One</div>
+<div class="link">Header Link Two</div>
+<div class="link">Header Link Three</div>
+
+
+</div>
+
+
+</div>
+</div>
 
 
 <body>
 
-<h1>This Website is awesome</h1>
+    <div class="hero">
+<div class="leftblock"><h1>This Website is awesome</h1>
 <p>This website has some subtext that goes here under the main title. 
     It's smaller font and the color is lower contast</p>
+    <button>Sign up</button>
+</div>
+<div class="rightblock">
+    <img src="https://th.bing.com/th/id/R.983cc8a1aaa7c3fc210226934b3e22c2?rik=fVRa9xsbt1kLtw&pid=ImgRaw&r=0" height="300px" width="650px">
 
-    <p>This is a placeholder for an image</p>
+</div>
+</div>
+
+<div class="information">
 
 <h2>Some random information</h2>
 
@@ -28,6 +43,7 @@
 <p>This is some subtext under an illustration or image</p>
 <p>This is some subtext under an illustration or image</p>
 
+</div>
 
 <i>This is an inspiring quote, or a testimonial from a customer. 
      Maybe it's just filling up space, or maybe people will actually read 
